Bug 444366 - KRunner: `desktop console` / `wm console` no longer run anything
Summary: KRunner: `desktop console` / `wm console` no longer run anything
Status: RESOLVED FIXED
Alias: None
Product: krunner
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 5.23.0
Platform: Debian unstable Linux
: NOR normal
Target Milestone: ---
Assignee: Alexander Lohnau
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2021-10-25 12:31 UTC by Dmitry Alexandrov
Modified: 2021-10-28 16:32 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.23.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dmitry Alexandrov 2021-10-25 12:31:09 UTC
## Steps to reproduce

· Open KRunner,
· type `wm console`,
· accept the suggested “Plasma Desktop Shell | Open KWin debug console”.

## Expected result

Console is opened.

## Observed result

Nothing happens: no success, no error.

## Cause

The appropriate D-Bus method is absent:

	$ qdbus org.kde.plasmashell /PlasmaShell org.kde.PlasmaShell.showInteractiveKWinConsole
	Error: org.freedesktop.DBus.Error.UnknownMethod
	No such method 'showInteractiveKWinConsole' in interface 'org.kde.PlasmaShell' at object path '/PlasmaShell' (signature '')

## Workaround

The console is available as `/usr/bin/plasma-interactiveconsole`, which does not seem to be documented anywhere.

All the above applies to ‘desktop console’ as well.
Comment 1 Alexander Lohnau 2021-10-26 05:31:53 UTC
Can confirm, will work on the fix
Comment 2 Bug Janitor Service 2021-10-27 16:17:04 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/1148
Comment 3 Bug Janitor Service 2021-10-27 16:38:30 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/656
Comment 4 Bug Janitor Service 2021-10-27 17:15:33 UTC
A possibly relevant merge request was started @ https://invent.kde.org/documentation/develop-kde-org/-/merge_requests/152
Comment 5 Alexander Lohnau 2021-10-27 17:54:37 UTC
Git commit dbf103451b6b2e6de2a87af706029d2d0759bb1e by Alexander Lohnau.
Committed on 27/10/2021 at 17:18.
Pushed by alex into branch 'master'.

Update docs for plasma interactive console

M  +8    -2    content/docs/plasma/kwin/_index.md
M  +9    -3    content/docs/plasma/scripting/_index.md

https://invent.kde.org/documentation/develop-kde-org/commit/dbf103451b6b2e6de2a87af706029d2d0759bb1e
Comment 6 Alexander Lohnau 2021-10-27 17:54:39 UTC
Git commit 4423d3b0ab69323ab21b8e1f6e7014ce7de57ca9 by Alexander Lohnau.
Committed on 27/10/2021 at 17:03.
Pushed by alex into branch 'master'.

plasma-desktop runner: Fix showing interactive plasma/kwin console

The D-Bus methods do not exist anymore, instead the standalone executable
should be called.

M  +1    -0    runners/plasma-desktop/CMakeLists.txt
M  +19   -76   runners/plasma-desktop/plasma-desktop-runner.cpp
M  +0    -4    runners/plasma-desktop/plasma-desktop-runner.h

https://invent.kde.org/plasma/plasma-desktop/commit/4423d3b0ab69323ab21b8e1f6e7014ce7de57ca9
Comment 7 Alexander Lohnau 2021-10-27 17:55:05 UTC
Git commit e880214da9c1cd7536cbce82395b858811aff2c8 by Alexander Lohnau.
Committed on 27/10/2021 at 17:55.
Pushed by alex into branch 'Plasma/5.23'.

plasma-desktop runner: Fix showing interactive plasma/kwin console

The D-Bus methods do not exist anymore, instead the standalone executable
should be called.


(cherry picked from commit 4423d3b0ab69323ab21b8e1f6e7014ce7de57ca9)

M  +1    -0    runners/plasma-desktop/CMakeLists.txt
M  +19   -76   runners/plasma-desktop/plasma-desktop-runner.cpp
M  +0    -4    runners/plasma-desktop/plasma-desktop-runner.h

https://invent.kde.org/plasma/plasma-desktop/commit/e880214da9c1cd7536cbce82395b858811aff2c8
Comment 8 Alexander Lohnau 2021-10-27 17:58:39 UTC
Git commit 63bea079c5d614e612ae5e2cafd7f6e8b1aae5a9 by Alexander Lohnau.
Committed on 27/10/2021 at 17:01.
Pushed by alex into branch 'master'.

interactiveconsole: Allow specifying mode from command line parameter

This is needed for the runner, which has two different keywords for the two scripting modes

M  +4    -3    interactiveconsole/interactiveconsole.cpp
M  +3    -3    interactiveconsole/interactiveconsole.h
M  +22   -1    interactiveconsole/main.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/63bea079c5d614e612ae5e2cafd7f6e8b1aae5a9
Comment 9 Alexander Lohnau 2021-10-27 17:59:08 UTC
Git commit 46eb52dcd8a525b0be3b4a52fdda0dfa19da5dfc by Alexander Lohnau.
Committed on 27/10/2021 at 17:59.
Pushed by alex into branch 'Plasma/5.23'.

interactiveconsole: Allow specifying mode from command line parameter

This is needed for the runner, which has two different keywords for the two scripting modes


(cherry picked from commit 63bea079c5d614e612ae5e2cafd7f6e8b1aae5a9)

M  +4    -3    interactiveconsole/interactiveconsole.cpp
M  +3    -3    interactiveconsole/interactiveconsole.h
M  +22   -1    interactiveconsole/main.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/46eb52dcd8a525b0be3b4a52fdda0dfa19da5dfc