plasma-desktop runner: Fix showing interactive plasma/kwin console

The D-Bus methods do not exist anymore, instead the standalone executable
should be called.

BUG: 444366